fixed  input css wrap

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ textarea:focus {
 	box-shadow: 0 0 8px 0 #003049;
 }
 input[type='number'] {
-	width: 60px;
 	padding: 0.5rem 1rem;
 	-webkit-appearance: none;
 	-moz-appearance: textfield;
@@ -92,8 +91,7 @@ button:hover {
 	box-shadow: 0 0 8px 0 #003049;
 }
 .user-data select {
-	width: 50%;
-	padding: 0.8rem 1rem;
+	padding: 0.5rem 1rem;
 }
 .user-data,
 .game-data,
@@ -115,13 +113,24 @@ button:hover {
 	padding: 12px 10px;
 	border-radius: 5px 0 0 5px;
 }
-.uage,
 .ghour,
-.satsgame {
+.satsgame,
+.ageItem {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
+}
+.ageItem label {
+	width: 25%;
+}
+.ageItem input,
+.ageItem select {
+	width: 68%;
+}
+.ageItem:nth-child(1) {
+	padding-top: 0.5rem;
+	padding-bottom: 1rem;
 }
 .ugender {
 	display: flex;
@@ -149,16 +158,14 @@ h4 {
 	justify-content: space-between;
 }
 .days {
-	flex: 0 32%;
-	margin-bottom: 0.5rem;
-}
-.gamesItems,
-.satItem {
 	flex: 0 49%;
 	margin-bottom: 0.5rem;
 }
+.gamesItems {
+	flex: 0 99%;
+	margin-bottom: 0.5rem;
+}
 .itemhours,
-.satItem,
 .satItem {
 	flex: 0 auto;
 }
@@ -183,18 +190,24 @@ h4 {
 .user-comments p {
 	text-align: right;
 }
-@media (max-width: 480px) {
+@media (max-width: 580px) {
 	body {
 		background-image: url('/img/mosaic-alien-on-wall-movil.jpg');
 	}
 }
-@media (min-width: 481px) and (max-width: 1024px) {
+@media (min-width: 581px) and (max-width: 1024px) {
 	body {
 		background-image: url('/img/mosaic-alien-on-wall-tablet.jpg');
+	}
+	.container {
+		max-width: 580px;
 	}
 }
 @media (min-width: 1025px) {
 	body {
 		background-image: url('/img/mosaic-alien-on-wall-desktop.jpg');
+	}
+	.container {
+		width: 70%;
 	}
 }
